--- a/front/src/components/accueil/compteurs/Compteurs.css
+++ b/front/src/components/accueil/compteurs/Compteurs.css
@@ -43,6 +43,10 @@
         margin-top: 25px;
         margin-bottom: 44px;
     }
+    
+    .case {
+        padding: 0;
+    }
 }
 
 @media screen and (min-width:421px) and (max-width:1022px) {
@@ -66,6 +70,10 @@
 
     .compteurs {
         margin-top: 15px;
+    }
+
+    .case {
+        padding: 0;
     }
 }
 
