--- a/front/src/components/accueil/horaires/Horaires.css
+++ b/front/src/components/accueil/horaires/Horaires.css
@@ -49,7 +49,7 @@
         margin-top: 25px;
     }
 
-    td {
+    .case {
         padding: 0;
     }
 }
@@ -77,7 +77,7 @@
         margin: auto;
     }
 
-    td {
+    .case {
         padding: 0;
     }
 }
