--- a/front/src/components/contact/contact/Contact.css
+++ b/front/src/components/contact/contact/Contact.css
@@ -1,6 +1,27 @@
-html {
-    background: url('../src/img/texture-bois.jpg');
-    background-size: cover;
+.black {
+    color: black;
+    margin-top: 16px;
+}
+
+.coord {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 20px;
+    margin-top: 130px;
+}
+
+.nom {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.infos {
+    font-size: 20px;
 }
 
 @media screen and (max-width:420px) {
@@ -17,6 +38,14 @@ html {
     .mob-10{width: 83.33%;}
     .mob-11{width: 91.66%;}
     .mob-12{width: 100%;}
+
+    .coord {
+        margin-bottom: 54px;
+    }
+
+    .joli {
+        display: none;
+    }
 }
 
 @media screen and (min-width:421px) and (max-width:1022px) {
@@ -33,6 +62,10 @@ html {
     .tab-10{width: 83.33%;}
     .tab-11{width: 91.66%;}
     .tab-12{width: 100%;}
+
+    .pratique {
+        display: none;
+    }
 }
 
 @media screen and (min-width:1023px) and (max-width:1024px) {
@@ -49,6 +82,14 @@ html {
     .tabx-10{width: 83.33%;}
     .tabx-11{width: 91.66%;}
     .tabx-12{width: 100%;}
+
+    .coord {
+        margin-top: 300px;
+    }
+
+    .pratique {
+        display: none;
+    }
 }
 
 @media screen and (min-width:1025px) {
@@ -65,4 +106,13 @@ html {
     .dsk-10{width: 83.33%;}
     .dsk-11{width: 91.66%;}
     .dsk-12{width: 100%;}
+
+    .gauche {
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+
+    .pratique {
+        display: none;
+    }
 }
