--- a/front/src/components/fonctionnement/explication/Explication.css
+++ b/front/src/components/fonctionnement/explication/Explication.css
@@ -1,6 +1,19 @@
-html {
-    background: url('../src/img/texture-bois.jpg');
-    background-size: cover;
+.cadre {
+    background-color: white;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+
+.texte {
+    text-align: justify;
+    font-size: 1.15em;
+}
+
+.texte_gras {
+    font-weight: bold;
+    padding-bottom: 8px;
 }
 
 @media screen and (max-width:420px) {
@@ -17,6 +30,12 @@ html {
     .mob-10{width: 83.33%;}
     .mob-11{width: 91.66%;}
     .mob-12{width: 100%;}
+
+    .cadre {
+        margin-top: 118px;
+        margin-left: auto;
+        margin-right: auto;
+      }
 }
 
 @media screen and (min-width:421px) and (max-width:1022px) {
@@ -33,6 +52,12 @@ html {
     .tab-10{width: 83.33%;}
     .tab-11{width: 91.66%;}
     .tab-12{width: 100%;}
+
+    .cadre {
+        margin-top: 118px;
+        margin-left: auto;
+        margin-right: auto;
+      }
 }
 
 @media screen and (min-width:1023px) and (max-width:1024px) {
@@ -49,6 +74,12 @@ html {
     .tabx-10{width: 83.33%;}
     .tabx-11{width: 91.66%;}
     .tabx-12{width: 100%;}
+
+    .cadre {
+        margin-top: 130px;
+        margin-left: auto;
+        margin-right: auto;
+      }
 }
 
 @media screen and (min-width:1025px) {
@@ -65,4 +96,9 @@ html {
     .dsk-10{width: 83.33%;}
     .dsk-11{width: 91.66%;}
     .dsk-12{width: 100%;}
+
+    .cadre {
+        margin-top: 20vh;
+        padding: 10px;
+    }
 }
