--- a/front/src/components/fonctionnement/objets/Objets.css
+++ b/front/src/components/fonctionnement/objets/Objets.css
@@ -1,6 +1,23 @@
-html {
-    background: url('../src/img/texture-bois.jpg');
-    background-size: cover;
+.encart {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.texte_gras {
+    font-weight: bold;
+    padding-bottom: 8px;
+    font-size: 30px;
+}
+
+.liste {
+    padding-left: 40px;
 }
 
 @media screen and (max-width:420px) {
@@ -17,6 +34,7 @@ html {
     .mob-10{width: 83.33%;}
     .mob-11{width: 91.66%;}
     .mob-12{width: 100%;}
+
 }
 
 @media screen and (min-width:421px) and (max-width:1022px) {
@@ -65,4 +83,5 @@ html {
     .dsk-10{width: 83.33%;}
     .dsk-11{width: 91.66%;}
     .dsk-12{width: 100%;}
+
 }
