--- a/front/src/components/accueil/carousel/Carousel.css
+++ b/front/src/components/accueil/carousel/Carousel.css
@@ -1,5 +1,8 @@
 .slider {
   overflow: hidden;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .slides {
@@ -48,7 +51,7 @@
     .mob-12{width: 100%;}
 
     .slider {
-      margin-top: 118px;
+      margin-top: 13vh;
       margin-left: auto;
       margin-right: auto;
       max-height: 40%;
@@ -83,7 +86,7 @@
     .tab-12{width: 100%;}
 
     .slider {
-      margin-top: 118px;
+      margin-top: 7.5vh;
       margin-left: auto;
       margin-right: auto;
       max-height: 40%;
@@ -102,6 +105,41 @@
     }
 }
 
+@media screen and (min-width:1023px) and (max-width:1024px) {
+  .tabx-0{display: none;}
+  .tabx-1{width: 8.33%;}
+  .tabx-2{width: 16.66%;}
+  .tabx-3{width: 25%;}
+  .tabx-4{width: 33.33%;}
+  .tabx-5{width: 41.66%;}
+  .tabx-6{width: 50%;}
+  .tabx-7{width: 58.33%;}
+  .tabx-8{width: 66.66%;}
+  .tabx-9{width: 75%;}
+  .tabx-10{width: 83.33%;}
+  .tabx-11{width: 91.66%;}
+  .tabx-12{width: 100%;}
+
+  .slider {
+    margin-top: 8vh;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 40%;
+    width: 100%;
+  }
+
+  .slides {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 300%;
+  }
+
+  .slides img{
+    width: 33.33%;
+  }
+}
+
 @media screen and (min-width:1025px) {
     .dsk-0{display: none;}
     .dsk-1{width: 8.33%;}
@@ -118,7 +156,9 @@
     .dsk-12{width: 100%;}
 
     .slider {
-      margin: 22.5vh auto;
+      margin-top: 18vh;
+      margin-left: auto;
+      margin-right: auto;
       height: 420px;
       width: 740px;
     }
