--- a/front/src/components/fonctionnement/explication/Explication.css
+++ b/front/src/components/fonctionnement/explication/Explication.css
@@ -13,7 +13,7 @@
 
 .texte_gras {
     font-weight: bold;
-    padding-bottom: 8px;
+    font-size: 20px;
 }
 
 @media screen and (max-width:420px) {
@@ -32,7 +32,7 @@
     .mob-12{width: 100%;}
 
     .cadre {
-        margin-top: 118px;
+        margin-top: 18vh;
         margin-left: auto;
         margin-right: auto;
       }
@@ -54,7 +54,7 @@
     .tab-12{width: 100%;}
 
     .cadre {
-        margin-top: 118px;
+        margin-top: 13vh;
         margin-left: auto;
         margin-right: auto;
       }
@@ -76,7 +76,7 @@
     .tabx-12{width: 100%;}
 
     .cadre {
-        margin-top: 130px;
+        margin-top: 11vh;
         margin-left: auto;
         margin-right: auto;
       }
