partie Admin avec défaut css

--- a/front/src/components/Admin/AdminEvenements.css
+++ b/front/src/components/Admin/AdminEvenements.css
@@ -152,7 +152,7 @@
     .adminNavButton{
         height: 6vw;
         width: 30vw;
-        font-size: 1.7em;
+        font-size: 1.7rem;
         margin: 0 1vw;
         margin:1vw;
     }
