--- a/front/src/components/footer/Footer.css
+++ b/front/src/components/footer/Footer.css
@@ -1,13 +1,3 @@
-.visites {
-    background-color: black;
-    color: white;
-    border-radius: 20px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    display: none;
-}
-
 .footer_div{
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(181,216,125,1) 60%);}
 
@@ -44,17 +34,19 @@
         bottom: 0;
     }
 
-    .visites {
-        align-items: center;
-        margin-top: 5px;
-        margin-bottom: 5px;
+    .admin {
+        margin-top: auto;
+        margin-bottom: auto;
+        color: black;
     }
 
     .legals {
         color: black;
-        vertical-align: middle;
-        text-align: right;
+        margin-top: auto;
+        margin-bottom: auto;
+        text-align: left;
         padding-right: 2%;
+        padding-left: 2%;
     }
 
     .row {
@@ -88,6 +80,7 @@
         float: right;
         margin: auto;
         font-size: 22px;
+        padding-right: 2%;
     }
 
     .footer_div {
@@ -96,17 +89,18 @@
         bottom: 0;
     }
 
-    .visites {
-        align-items: center;
-        margin-top: 5px;
-        margin-bottom: 5px;
+    .admin {
+        margin-top: auto;
+        margin-bottom: auto;
+        color: black;
     }
 
     .legals {
         color: black;
-        vertical-align: middle;
-        text-align: right;
-        padding-right: 2%;
+        margin-top: auto;
+        margin-bottom: auto;
+        text-align: left;
+        padding-left: 12%;
     }
 
     .row {
@@ -137,9 +131,8 @@
     }
 
     .footer_right {
-        float: right;
-        margin: auto;
         font-size: 22px;
+        color: black;
     }
 
     .footer_div {
@@ -148,17 +141,18 @@
         bottom: 0;
     }
 
-    .visites {
-        align-items: center;
-        margin-top: 5px;
-        margin-bottom: 5px;
+    .admin {
+        margin-top: auto;
+        margin-bottom: auto;
+        color: black;
+        margin-right: 2%;
     }
 
     .legals {
         color: black;
-        vertical-align: middle;
-        text-align: right;
-        padding-right: 2%;
+        text-align: center;
+        margin-top: auto;
+        margin-bottom: auto;
     }
 
     .row {
