--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,5 @@
 html {
-    background: url('../src/img/texture-bois.jpg');
-    background-size: cover;
+    background: url('https://images.unsplash.com/photo-1460602594182-8568137446ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1055&q=80');
 }
 
 @media screen and (max-width:420px) {
