--- a/front/src/components/accueil/compteurs/Compteurs.css
+++ b/front/src/components/accueil/compteurs/Compteurs.css
@@ -1,7 +1,7 @@
 .table_count {
     background-color: black;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .counts {
@@ -120,7 +120,7 @@
         display: flex;
         position: fixed;
         right: 0;
-        bottom: 36%;
+        margin-top: -36vh;
         justify-content: flex-end;
     }
 }
