--- a/front/src/components/mentions/Mentions.css
+++ b/front/src/components/mentions/Mentions.css
@@ -7,7 +7,7 @@
     margin-right: auto;
     text-align: center;
     padding: 20px;
-    margin-top: 17vh;
+    margin-top: 18vh;
     margin-bottom: 10vh;
 }
 
@@ -37,7 +37,7 @@
     .mob-12{width: 100%;}
 
     .cad {
-        margin-top: 18vh;
+        margin-top: 24vh;
         margin-bottom: 10vh;
     }
 }
@@ -57,6 +57,10 @@
     .tab-11{width: 91.66%;}
     .tab-12{width: 100%;}
 
+    .cad {
+        margin-top: 24vh;
+        margin-bottom: 10vh;
+    }
 }
 
 @media screen and (min-width:1023px) and (max-width:1024px) {
