--- a/front/src/components/navigation/navbar/Navbar.css
+++ b/front/src/components/navigation/navbar/Navbar.css
@@ -5,7 +5,7 @@
     overflow: visible;
     left: 0;
     height: 110px;
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(181,216,125,1) 60%);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, #cccaca 50%);
     z-index: 100;
 }
 
@@ -45,7 +45,7 @@
 
 @media (max-width: 1024px) {
     .navbar {
-        background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 25%, rgba(181,216,125,1) 65%);
+        background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 45%, #cccaca 75%);
     }
     .navbar__navigation-items {
         display: none;
