--- a/front/src/components/footer/Footer.css
+++ b/front/src/components/footer/Footer.css
@@ -9,7 +9,7 @@
 }
 
 .footer_div{
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(181,216,125,1) 60%);}
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, #f2f2f2 60%);}
 
 @media screen and (max-width:420px) {
     .mob-0{display: none;}
