--- a/front/src/components/navigation/navbar/Navbar.css
+++ b/front/src/components/navigation/navbar/Navbar.css
@@ -5,7 +5,8 @@
     overflow: visible;
     left: 0;
     height: 110px;
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(181,216,125,1) 60%);
+    background-color: #f2f2f2;
+    /* background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, #d9ffb3 60%); */
     z-index: 100;
 }
 
