--- a/front/src/components/Admin/AdminHeader.css
+++ b/front/src/components/Admin/AdminHeader.css
@@ -14,14 +14,16 @@
 
 .adminTitle{
     padding-right: 30%;
+    margin-top: 2vw;
 }
 
 
 
-.adminHomeButtonContainer{
+.adminButtonContainer{
     display:flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-top: 2.5vw;
 }
 
 .adminNav{
@@ -30,36 +32,26 @@
     align-items: center;
 }
 
-.adminWelcome{
+.adminChoice{
+    margin-top:0.5vw;
     color: white;
+
 }
 
-.adminHomeChoice{
-    padding:2vw;
-    color: white;
-}
-
-.adminHomeNavButton{
-    height: 3vw;
-    width: 10vw;
-    font-size: 1em;
-    margin: 0 1vw;
+.adminNavButton{
+    height: 1.5vw;
+    width: 7vw;
+    font-size: 0.8em;
+    margin: -2.5vw 1vw 0 1vw;
     text-decoration: none;
-}
-
-.inactive{
-    text-decoration: none;
-    color: black;
-}
-
-.active{
-    color: #37aae6;
 }
 
 .disconnect {
     color: red;
     text-decoration: underline;
 }
+
+
 
 @media screen and (max-width:420px) {
     .mob-0{display: none;}
@@ -88,31 +80,33 @@
     .adminTitle{
         text-align: center;
         padding:0;
-        
         font-size: 1.2em;
+        margin-top: 5%;
+       
     }
 
-    .adminWelcome{
-        font-size: 1.2em;
-        text-align:center;
-    }
-
-    .adminHomeChoice{
+    
+    .adminChoice{
         text-align: center;
+        font-size: 4vw;
     }
 
-    .adminHomeButtonContainer{
+    .adminButtonContainer{
         display:flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap:wrap;
         justify-content: space-around;
+        margin-top:-2vw;
     }
 
-    .adminHomeNavButton{
+    .adminNavButton{
         height: 6vw;
-        width: 40vw;
-        font-size: 1em;
+        width: 35vw;
+        font-size: 0.8em;
         margin: 0 1vw;
-        margin:3vw;
+        margin:1vw;
+        
+        
     }
 
 
@@ -150,31 +144,29 @@
         padding:0;
         margin-left: 0%;
         font-size: 2.2em;
+        margin-top: 5%;
     }
 
-    .adminWelcome{
-        font-size: 2em;
-        text-align:center;
-    }
-
-    .adminHomeChoice{
+    
+    .adminChoice{
         text-align: center;
-        font-size:1.8em;
+        font-size:2em;
     }
 
-    .adminHomeButtonContainer{
+    .adminButtonContainer{
         display:flex;
         flex-direction: row;
         flex-wrap:wrap;
-        justify-content: space-around;
+        justify-content: space-between;
+        margin-top:-4vw;
     }
 
-    .adminHomeNavButton{
-        height: 6vw;
-        width: 35vw;
-        font-size: 2em;
+    .adminNavButton{
+        height: 4vw;
+        width: 30vh;
+        font-size: 1.2em;
         margin: 0 1vw;
-        margin:3vw;
+        margin:1vw;
     }
 }
 
@@ -210,31 +202,30 @@
         padding:0;
         margin-left: 0%;
         font-size: 3.2em;
+        margin-top: 5%;
     }
 
-    .adminWelcome{
-        font-size: 2em;
-        text-align:center;
-    }
+    
 
-    .adminHomeChoice{
+    .adminChoice{
         text-align: center;
-        font-size:1.8em;
+        font-size:2em;
     }
 
-    .adminHomeButtonContainer{
+    .adminButtonContainer{
         display:flex;
         flex-direction: row;
         flex-wrap:wrap;
         justify-content: space-around;
+        margin-top:-3vw;
     }
 
-    .adminHomeNavButton{
-        height: 6vw;
-        width: 32vw;
-        font-size: 2em;
+    .adminNavButton{
+        height: 3vw;
+        width: 30vw;
+        font-size: 1.2em;
         margin: 0 1vw;
-        margin:3vw;
+        margin:1vw;
     }
 }
 
